{{$NEXT}}

0.009     2020-03-30 21:57:06 EDT
  - Upgrade share install to version 0.14.1 of hiredis.

0.008     2019-05-22 10:34:56 EDT
  - Require a newer version of Alien::Build::MM for a clean_install bugfix.
  - Reminder: You may need to reinstall XS modules built against Alien::hiredis if you had version 0.005 or older installed previously.

0.007     2019-05-20 15:52:46 EDT
  - Use clean_install for Alien::Build::MM to clean up any dynamic libraries lingering from previous versions.
    You may need to reinstall XS modules built against Alien::hiredis if you had version 0.005 or older installed previously.

0.006     2019-04-12 18:36:17 EDT
  - Isolate dynamic libraries in a share install so XS code is built statically.

0.005     2019-04-11 17:36:06 EDT
  - Trim unnecessary dynamic requirements for share install.

0.004     2019-04-10 14:58:53 EDT
  - Avoid broken hiredis version 0.13.0.

0.003     2019-02-06 19:41:53 EST
  - Require version 0.11.0 of hiredis to support nested multi-bulk replies up to a depth of 7.

0.002     2019-01-31 02:52:07 EST
  - Require GNU make for building hiredis (#1)

0.001     2019-01-30 21:18:12 EST
  - First release