@@ -5,25 +5,9 @@ copyright_holder = Dan Book
 copyright_year   = 2019
 
 [@Author::DBOOK]
-:version = 0.032
+:version = v1.0.3
 pod_tests = syntax
 irc = irc://irc.perl.org/#redis
--remove=Prereqs::FromCPANfile
-
-[Prereqs / RuntimeRequires]
-perl = 5.008001
-parent = 0
-Alien::Base = 0
-
-[Prereqs / TestRequires]
-Test::More = 0.88
-Test::Alien = 0
-
-[Prereqs / ConfigureRequires]
-Alien::Build = 1.61
-
-[Prereqs / DevelopRequires]
-FFI::Platypus = 0
 
 [AlienBuild]
 :version = 0.29
