@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Upgrade share install to version 1.0.0 of hiredis.
 
 0.009     2020-03-30 21:57:06 EDT
   - Upgrade share install to version 0.14.1 of hiredis.
